crates/forward-compatible-enum/tests/ui/empty_enum.rs
use forward_compatible_enum::ForwardCompatibleEnum;

#[derive(ForwardCompatibleEnum)]
pub enum EmptyEnum {
    // No variants!
}